Disable whats new by not passing parameter Fix spacing issue on navigation

--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -1,6 +1,7 @@
 .app-navigation {
   border-bottom: 1px solid $govuk-border-colour;
   background-color: govuk-colour("light-grey");
+  padding-top: 10px;
 }
 
 .no-js .app-navigation {
